gcc/fortran/error.c
@@ -476,7 +476,12 @@ gfc_warning (const char *nocmsgid, ...)
 
   va_start (argp, nocmsgid);
   if (buffer_flag == 0)
+  {
     warnings++;
+    if (warnings_are_errors)
+      errors++;
+  }
+
   error_print (_("Warning:"), _(nocmsgid), argp);
   va_end (argp);
 
@@ -519,14 +524,15 @@ gfc_notify_std (int std, const char *nocmsgid, ...)
 
   if (gfc_suppress_error)
     return warning ? SUCCESS : FAILURE;
-  
-  cur_error_buffer = warning ? &warning_buffer : &error_buffer;
+
+  cur_error_buffer = (warning && !warnings_are_errors)
+    ? &warning_buffer : &error_buffer;
   cur_error_buffer->flag = 1;
   cur_error_buffer->index = 0;
 
   if (buffer_flag == 0)
     {
-      if (warning)
+      if (warning && !warnings_are_errors)
 	warnings++;
       else
 	errors++;
@@ -539,7 +545,7 @@ gfc_notify_std (int std, const char *nocmsgid, ...)
   va_end (argp);
 
   error_char ('\0');
-  return warning ? SUCCESS : FAILURE;
+  return (warning && !warnings_are_errors) ? SUCCESS : FAILURE;
 }
 
 
@@ -557,6 +563,8 @@ gfc_warning_now (const char *nocmsgid, ...)
   i = buffer_flag;
   buffer_flag = 0;
   warnings++;
+  if (warnings_are_errors)
+    errors++;
 
   va_start (argp, nocmsgid);
   error_print (_("Warning:"), _(nocmsgid), argp);
